[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Abhishek Gupta <abhishek.gupta@ontic.ai>"]
readme = "README.md"
packages = [{include = "poetry_demo", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
